Improve the way we get the DPI to work reasonably even if the user is not logged into GNOME.  Bug 332926, r=vlad, sr=dbaron